# performance_term_project

./: ALU.cpp  ALU.h  CMakeLists.txt  CPU.cpp  CPU.h  Decode.cpp  Decode.h  Memory.cpp  Memory.h  README.md  Registers.cpp  Registers.h  VM.cpp  VM.h  main.cpp  main.out  tests.cpp
Arduino/: bin_to_c.py
riscv-example/: .gitignore  CMakeLists.txt  README.md  esp32-c3.ld  freedom-tools.patch  gdbinit  hardware_notes.txt  microsemi-riscv.ld  riscv-toolchain.cmake  rv_code.map  rv_code.txt
riscv-example/coremark/: CMakeLists.txt  core_main.c  core_portme.c  core_portme.h  coremark_decompile.txt  ee_printf.c  entry.S  objdump.sh
riscv-example/src/: CMakeLists.txt  main.cpp  main.fib.S
riscv-example/test/: unit_test_main.S
riscv-example/tools/docker/: Dockerfile-build  Dockerfile-run
